--- a/m1u2/m1u2.html
+++ b/m1u2/m1u2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>NOMBRE Y APELLIDO</h1>
-    <img src="imagenes/imagen.jpg" alt="foto personal">
+    <img src="imagenes/imagen.jpg" alt="foto personal" title="Esta es mi foto">
     <h2>Edad</h2>
     <h2>Domicilio</h2>
     <h3>Que series me gustan?</h3>
