--- a/m2/m2u3/index.html
+++ b/m2/m2u3/index.html
@@ -67,12 +67,12 @@
     <!-- Columnas -->
     <div class="container-fluid bg-light text-center">
         <div class="row">
-            <div class="col-sm-6 col-md-4 col-lg-2 bg-primary text-white p-3 border"><i class="bi bi-airplane"></i></div>
-            <div class="col-sm-6 col-md-4 col-lg-2 bg-primary text-white p-3 border"><i class="bi bi-android"></i></div>
-            <div class="col-sm-6 col-md-4 col-lg-2 bg-primary text-white p-3 border"><i class="bi bi-backpack2"></i></div>
-            <div class="col-sm-6 col-md-4 col-lg-2 bg-primary text-white p-3 border"><i class="bi bi-bank"></i></div>
-            <div class="col-sm-6 col-md-4 col-lg-2 bg-primary text-white p-3 border"><i class="bi bi-calendar-plus-fill"></i></div>
-            <div class="col-sm-6 col-md-4 col-lg-2 bg-primary text-white p-3 border"><i class="bi bi-cash-coin"></i></div>
+            <div class="col-sm-6 col-md-4 col-lg-2 p-3 border"><a href="#"><i class="bi bi-airplane"></i></a></div>
+            <div class="col-sm-6 col-md-4 col-lg-2 p-3 border"><a href="#"><i class="bi bi-android"></i></a></div>
+            <div class="col-sm-6 col-md-4 col-lg-2 p-3 border"><a href="#"><i class="bi bi-backpack2"></i></a></div>
+            <div class="col-sm-6 col-md-4 col-lg-2 p-3 border"><a href="#"><i class="bi bi-bank"></i></a></div>
+            <div class="col-sm-6 col-md-4 col-lg-2 p-3 border"><a href="#"><i class="bi bi-calendar-plus-fill"></i></a></div>
+            <div class="col-sm-6 col-md-4 col-lg-2 p-3 border"><a href="#"><i class="bi bi-cash-coin"></i></a></div>
         </div>
     </div>
 
